Modification de CHANGELOG

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,8 @@
-* 	 3 minutes ago  (HEAD -> sarujan, origin/sarujan) Add CHANGELOG + Other modifications (Sarujan RAJARATNAM)
-* 	 8 minutes ago  Create LICENSE (rsarujan)
+* 	 52 seconds ago  (HEAD -> sarujan, origin/sarujan) Modification de la LICENSE.md (Sarujan RAJARATNAM)
+* 	 2 minutes ago  Modification de la LICENSE.md (Sarujan RAJARATNAM)
+* 	 64 minutes ago  Add CHANGELOG (Sarujan RAJARATNAM)
+* 	 67 minutes ago  Add CHANGELOG + Other modifications (Sarujan RAJARATNAM)
+* 	 73 minutes ago  Create LICENSE (rsarujan)
 * 	 3 days ago  Correction Yml pb authentification avec Jfrog (Sarujan RAJARATNAM)
 * 	 3 days ago  Correction Yml pb authentification avec Jfrog (Sarujan RAJARATNAM)
 * 	 3 days ago  Correction Yml pb authentification avec Jfrog (Sarujan RAJARATNAM)
